{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 5,
  "lineage": "047137fb-67b5-2fa3-b9ec-d9c01d4d8b52",
  "resources": [
    {
      "module": "module.ec2-instance",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844416514196:subnet/subnet-050703f2828b7d1e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.64.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050703f2828b7d1e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "844416514196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "vpc_id": "vpc-004d3065b8de617b4"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c3389a4fa5bddaad",
            "arn": "arn:aws:ec2:us-east-1:844416514196:instance/i-023add60bc296de3b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-023add60bc296de3b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03e11234a1efb56d7"
              }
            ],
            "primary_network_interface_id": "eni-03e11234a1efb56d7",
            "private_dns": "ip-172-31-77-153.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.77.153",
            "public_dns": "ec2-44-200-94-230.compute-1.amazonaws.com",
            "public_ip": "44.200.94.230",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03275f18d609ee9fc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "-20260401110947929200000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-050703f2828b7d1e7",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
            },
            "vpc_security_group_ids": [
              "sg-0eca4ba741026dfa6"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "844416514196",
            "id": "i-023add60bc296de3b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2-instance.aws_iam_instance_profile.this",
            "module.ec2-instance.aws_iam_role.this",
            "module.ec2-instance.aws_security_group.this",
            "module.ec2-instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2-instance.data.aws_partition.current",
            "module.ec2-instance.data.aws_ssm_parameter.this",
            "module.ec2-instance.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844416514196:security-group/sg-0eca4ba741026dfa6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0eca4ba741026dfa6",
            "ingress": [],
            "name": "-20260401110947929200000001",
            "name_prefix": "-",
            "owner_id": "844416514196",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": ""
            },
            "tags_all": {
              "Name": ""
            },
            "timeouts": null,
            "vpc_id": "vpc-004d3065b8de617b4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "844416514196",
            "id": "sg-0eca4ba741026dfa6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2-instance.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2-instance",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844416514196:security-group-rule/sgr-0ac080182be1751ae",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-0ac080182be1751ae",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0eca4ba741026dfa6",
            "security_group_rule_id": "sgr-0ac080182be1751ae",
            "tags": {
              "Name": "-ipv4_default"
            },
            "tags_all": {
              "Name": "-ipv4_default"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "844416514196",
            "id": "sgr-0ac080182be1751ae",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2-instance.aws_security_group.this",
            "module.ec2-instance.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844416514196:security-group-rule/sgr-0b951dfff080ebed2",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-0b951dfff080ebed2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0eca4ba741026dfa6",
            "security_group_rule_id": "sgr-0b951dfff080ebed2",
            "tags": {
              "Name": "-ipv6_default"
            },
            "tags_all": {
              "Name": "-ipv6_default"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "844416514196",
            "id": "sgr-0b951dfff080ebed2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2-instance.aws_security_group.this",
            "module.ec2-instance.data.aws_subnet.this"
          ]
        }
      ]
    }
  ]
}